--- a/app/src/main/res/layout/read_recycler.xml
+++ b/app/src/main/res/layout/read_recycler.xml
@@ -22,7 +22,7 @@
                 app:layout_constraintStart_toStartOf="parent"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Question : "
+                android:text="@string/question"
                 android:paddingStart="@dimen/_2sdp"
                 android:id="@+id/question"
                 android:textStyle="bold"
@@ -47,13 +47,14 @@
                 android:layout_width="wrap_content"
                 android:padding="@dimen/_3sdp"
                 android:layout_height="wrap_content"
+                android:layout_marginTop="@dimen/_3sdp"
                 android:text="This is the main question"
                 android:textColor="@android:color/holo_red_dark"
                 android:layout_marginStart="@dimen/_5sdp"
                 android:inputType="textMultiLine"
                 android:id="@+id/mainQuestion"
                 android:textStyle="bold"
-                android:textSize="@dimen/_19sdp"
+                android:textSize="@dimen/_18sdp"
                 />
 
 
@@ -67,7 +68,7 @@
                 android:layout_height="wrap_content"
                 android:text="Ans :"
                 android:singleLine="true"
-                android:textColor="@color/black_textColor"
+                android:textColor="@android:color/holo_green_dark"
                 android:id="@+id/answare"
                 android:textStyle="bold"
                 android:textSize="@dimen/_18sdp"
@@ -80,10 +81,10 @@
                 android:layout_marginStart="@dimen/_5sdp"
                 android:layout_width="wrap_content"
                 android:padding="@dimen/_3sdp"
+                android:inputType="textMultiLine"
                 android:layout_height="wrap_content"
                 android:text="this is the ans"
-                android:singleLine="true"
-                android:textColor="@android:color/holo_green_dark"
+                android:textColor="@color/black_textColor"
                 android:id="@+id/mainAnsware"
                 android:textStyle="bold"
                 android:textSize="@dimen/_18sdp"
