--- a/app/src/main/res/layout/activity_read_and_exam.xml
+++ b/app/src/main/res/layout/activity_read_and_exam.xml
@@ -12,7 +12,7 @@
     <com.google.android.material.tabs.TabLayout
         app:layout_constraintTop_toTopOf="parent"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="@dimen/_40sdp"
         android:id="@+id/tabLayout"
         app:tabTextColor="@color/black_textColor"
         app:tabSelectedTextColor="@color/white"
