--- a/app/src/main/res/layout/exam_recycler_design.xml
+++ b/app/src/main/res/layout/exam_recycler_design.xml
@@ -27,15 +27,43 @@
             app:layout_constraintBottom_toBottomOf="parent" />
 
 
-<androidx.constraintlayout.widget.ConstraintLayout
+
+    <TextView
+        app:layout_constraintTop_toTopOf="parent"
+        android:layout_width="match_parent"
+        android:layout_height="@dimen/_40sdp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        android:text="Subject Name"
+        android:id="@+id/subjectName"
+        android:background="@color/sky"
+
+        android:textSize="@dimen/_20sdp"
+        android:textStyle="bold"
+        android:textColor="@color/black_textColor"
+        android:gravity="center"
+        />
+
+    <View
+        app:layout_constraintTop_toBottomOf="@id/subjectName"
+        android:layout_width="match_parent"
+        android:layout_height="@dimen/_1sdp"
+        android:id="@+id/view"
+        android:background="@color/background"
+        />
+
+
+
+    <androidx.constraintlayout.widget.ConstraintLayout
     android:id="@+id/topDisplay"
-    app:layout_constraintTop_toTopOf="parent"
+    app:layout_constraintTop_toBottomOf="@id/view"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:paddingTop="@dimen/_15sdp"
     android:layout_marginStart="@dimen/_10sdp"
     android:paddingEnd="@dimen/_10sdp"
     >
+
 
     <TextView
 
