--- a/app/src/main/res/layout/fragment_exam.xml
+++ b/app/src/main/res/layout/fragment_exam.xml
@@ -2,12 +2,11 @@
 <androidx.constraintlayout.widget.ConstraintLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_margin="@dimen/_5sdp"
-    android:paddingBottom="@dimen/_50sdp"
-    tools:context=".Fragments.ExamFragment">
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    tools:context=".Fragments.ExamFragment"
+    >
 
     <TextView
         app:layout_constraintTop_toTopOf="parent"
@@ -15,9 +14,10 @@
         android:layout_height="@dimen/_40sdp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        android:text="Subject Name"
+        android:text="@string/subject_name"
         android:id="@+id/subjectName"
-        android:textSize="@dimen/_200sdp"
+        android:background="@color/sky"
+        android:textSize="@dimen/_20sdp"
         android:textStyle="bold"
         android:textColor="@color/black_textColor"
         android:gravity="center"
@@ -30,29 +30,32 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:id="@+id/examRecycler"
+        android:layout_margin="@dimen/_5sdp"
+        android:paddingBottom="@dimen/_50sdp"
+
         tools:listitem="@layout/chapter_recycler_design"
         app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
         />
 
 
-    <androidx.appcompat.widget.AppCompatButton
-        android:layout_width="wrap_content"
-        android:layout_height="@dimen/_40sdp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        android:layout_margin="@dimen/_10sdp"
-        android:background="@drawable/department_clicked"
-        android:textStyle="bold"
-        android:textColor="@color/black_textColor"
-        android:id="@+id/readOfflineBtn"
-        android:paddingStart="@dimen/_10sdp"
-        android:paddingEnd="@dimen/_10sdp"
-        android:paddingTop="@dimen/_5sdp"
-        android:paddingBottom="@dimen/_5sdp"
-        android:textSize="@dimen/_18sdp"
-        android:text="@string/read_offline"
-        />
-
+<!--    <androidx.appcompat.widget.AppCompatButton-->
+<!--        android:layout_width="wrap_content"-->
+<!--        android:layout_height="@dimen/_40sdp"-->
+<!--        app:layout_constraintBottom_toBottomOf="parent"-->
+<!--        app:layout_constraintEnd_toEndOf="parent"-->
+<!--        android:layout_margin="@dimen/_10sdp"-->
+<!--        android:background="@drawable/department_clicked"-->
+<!--        android:textStyle="bold"-->
+<!--        android:textColor="@color/black_textColor"-->
+<!--        android:id="@+id/readOfflineBtn"-->
+<!--        android:paddingStart="@dimen/_10sdp"-->
+<!--        android:paddingEnd="@dimen/_10sdp"-->
+<!--        android:paddingTop="@dimen/_5sdp"-->
+<!--        android:paddingBottom="@dimen/_5sdp"-->
+<!--        android:textSize="@dimen/_18sdp"-->
+<!--        android:text="@string/read_offline"-->
+<!--        />-->
+<!---->
 <LinearLayout
     app:layout_constraintStart_toStartOf="parent"
     android:layout_width="match_parent"
