--- a/app/src/main/res/layout/read_recycler.xml
+++ b/app/src/main/res/layout/read_recycler.xml
@@ -5,7 +5,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     app:cardCornerRadius="@dimen/_10sdp"
     app:cardElevation="@dimen/_10sdp"
-    android:layout_margin="@dimen/_8sdp"
+    android:layout_margin="@dimen/_5sdp"
     android:layout_height="wrap_content">
 
 
@@ -13,7 +13,7 @@
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:padding="@dimen/_5sdp"
+            android:padding="@dimen/_3sdp"
             >
 
 
@@ -88,6 +88,28 @@
                 android:id="@+id/mainAnsware"
                 android:textStyle="bold"
                 android:textSize="@dimen/_18sdp"
+                />
+
+
+
+
+
+            <TextView
+                app:layout_constraintTop_toBottomOf="@id/answare"
+                app:layout_constraintStart_toStartOf="parent"
+                android:layout_marginBottom="@dimen/_10sdp"
+                android:layout_marginStart="@dimen/_5sdp"
+                android:layout_marginEnd="@dimen/_5sdp"
+                android:layout_width="wrap_content"
+                android:padding="@dimen/_3sdp"
+                android:visibility="gone"
+                android:inputType="textMultiLine"
+                android:layout_height="wrap_content"
+                android:text="this is the ans description"
+                android:textColor="@color/black_textColor"
+                android:id="@+id/answerDescription"
+                android:textStyle="bold"
+                android:textSize="@dimen/_16sdp"
                 />
 
 
